Add custom android Activity
Doesn't do anything yet, but we're going to need it for the android
integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ if (ANDROID)
     find_package(SQLite3)
     find_package(ZLIB)
     find_package(Gradle)
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/android/version.gradle.in ${CMAKE_BINARY_DIR}/version.gradle)
 else()
     find_package(Qt5 ${QT_MIN_VERSION} REQUIRED COMPONENTS Widgets DBus)
 endif()
