Added to CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SRCS_base
     podcastsearchmodel.cpp
     storagemanager.cpp
     storagemovejob.cpp
+    searchhistorymodel.cpp
     mpris2/mpris2.cpp
     resources.qrc
 )
