Change subscription page icon to bookmarks

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -124,6 +124,7 @@ if(ANDROID)
         globe
         data-error
         rss
+        bookmarks
         document-import
         document-export
         document-open-folder
