--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -7,7 +7,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.kde.kasts"
           android:versionName="0.0.1"
-          android:versionCode="1588098483"
+          android:versionCode="1627466509"
           android:installLocation="auto">
 
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
@@ -57,6 +57,9 @@
             <!-- auto screen scale factor -->
             <meta-data android:name="android.app.auto_screen_scale_factor" android:value="true"/>
         </activity>
+        <service android:name="org.kde.kasts.MediaService" >
+            <meta-data android:name="android.app.background_running" android:value="true"/>
+        </service>
     </application>
 
 </manifest>
