--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -7,7 +7,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.kde.kasts"
           android:versionName="0.0.1"
-          android:versionCode="1628239323"
+          android:versionCode="1628285196"
           android:installLocation="auto">
 
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
@@ -16,7 +16,7 @@
 
     <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Kasts" android:icon="@mipmap/ic_launcher">
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation"
-                  android:name="org.kde.kasts.Activity"
+                  android:name="org.kde.kasts.KastsActivity"
                   android:label="Kasts"
                   android:windowSoftInputMode="adjustResize"
                   android:launchMode="singleTop">
@@ -57,9 +57,6 @@
             <!-- auto screen scale factor -->
             <meta-data android:name="android.app.auto_screen_scale_factor" android:value="true"/>
         </activity>
-        <service android:name="org.kde.kasts.MediaService" >
-            <meta-data android:name="android.app.background_running" android:value="true"/>
-        </service>
     </application>
 
 </manifest>
