--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,7 @@ def timestamp = (int)(new Date().getTime()/1000)
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.core:core:1.3.1'
 }
 
 android {
