Add tools-report-bug icon for android
This icon is automatically added to the AboutPage, but is missing on
android if not added explicitly.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -133,6 +133,7 @@ if(ANDROID)
         delete
         settings-configure
         help-about-symbolic
+        tools-report-bug
         list-add
         list-remove
         view-refresh
