Add FeedListPage sorting
The feeds will be sorted by (1) descending number of unread/unplayed
entries and (2) alphabetically by name.  The current item and current
selection are maintained after re-sorting when the number of unread
entries has changed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SRCS_base
     storagemovejob.cpp
     models/chaptermodel.cpp
     models/feedsmodel.cpp
+    models/feedsproxymodel.cpp
     models/entriesmodel.cpp
     models/queuemodel.cpp
     models/episodemodel.cpp
