Wrap feed update routine in KJob and make it more efficient
The feed update routine which is now spread over several methods
in Fetcher, is now put into a self-contained KJob.  This will allow
to re-use this job later on in e.g. gpodder sync, where it's
required to update feeds before syncing episode statuses.

This also makes the feed update abortable.

Lastly, but most importantly, the feed update procedure has been
optimized to minimize database transactions, resulting in a dramatic
speed-up.  This is especially true for importing new feeds, which
will now be at least 5x faster on slow hardware.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,8 @@ set(SRCS_base
     enclosuredownloadjob.cpp
     storagemanager.cpp
     storagemovejob.cpp
+    updatefeedjob.cpp
+    fetchfeedsjob.cpp
     models/chaptermodel.cpp
     models/feedsmodel.cpp
     models/feedsproxymodel.cpp
