Link against sqlite on android
Tricks androiddeployqt into including the libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ if (ANDROID)
     find_package(Qt5 ${QT_MIN_VERSION} REQUIRED COMPONENTS Svg)
     find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS Kirigami2)
     find_package(OpenSSL REQUIRED)
+    find_package(SQLite3 REQUIRED)
 else()
     find_package(Qt5 ${QT_MIN_VERSION} REQUIRED COMPONENTS Widgets DBus)
 endif()
