--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ ecm_setup_version(${PROJECT_VERSION}
 
 find_package(Qt5 ${QT_MIN_VERSION} REQUIRED NO_MODULE COMPONENTS Core Quick Test Gui QuickControls2 Sql Multimedia)
 find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS CoreAddons Syndication Config I18n)
+find_package(Taglib REQUIRED)
 
 if (ANDROID)
     find_package(Qt5 ${QT_MIN_VERSION} REQUIRED COMPONENTS Svg)
