Add copy buttons for feed and episode download URLs
BUG: 443282

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -164,6 +164,7 @@ if(ANDROID)
         edit-clear-all
         edit-select-all
         edit-select-none
+        edit-copy
         download
         media-playlist-append
         media-seek-backward
