Add podcast subscription and episode play state synchronization
This implements the gpodder API from scratch.  It turned out that
libmygpo-qt has several critical bugs, and there's no response to pull
requests upstream.  So using that library was not an option.

The implementation into kasts consists of the following:
- Can sync with gpodder.net or with a nextcloud server that has the
  nextcloud-gpodder app installed.  (This app is mostly API compatible
  with gpodder.)
- Passwords are stored using qtkeychain.  If the keychain is
  unavailable it will fallback to file.
- It syncs podcast subscriptions and episode play positions, including
  marking episodes as played. Episodes that have a non-zero play
  position will be added to the queue automatically.
- It will check for a metered connection before syncing.  This is
  coupled to the allowMeteredFeedUpdates setting.
- Full synchronization can be performed either manually (from the
  settings page) or through automatic triggers: on startup and/or on
  feed refresh.
- There is an additional possibility to trigger quick upload-only syncs
  to make sure that the local changes are immediately uploaded to the
  server (if the connection allows).  This will trigger when
  subscriptions are added or removed, when the pause/play button is
  toggled or an episode is marked as played.
- This implements a few safeguards to avoid having multiple feed URLS
  pointing to the same underlying feed (e.g. http vs https).  This
  solves part of #17

Solves #13

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,21 @@ set(SRCS_base
     models/podcastsearchmodel.cpp
     mpris2/mpris2.cpp
     powermanagementinterface.cpp
+    sync/sync.cpp
+    sync/syncjob.cpp
+    sync/syncutils.cpp
+    sync/gpodder/gpodder.cpp
+    sync/gpodder/genericrequest.cpp
+    sync/gpodder/loginrequest.cpp
+    sync/gpodder/logoutrequest.cpp
+    sync/gpodder/devicerequest.cpp
+    sync/gpodder/syncrequest.cpp
+    sync/gpodder/updatesyncrequest.cpp
+    sync/gpodder/updatedevicerequest.cpp
+    sync/gpodder/subscriptionrequest.cpp
+    sync/gpodder/uploadsubscriptionrequest.cpp
+    sync/gpodder/episodeactionrequest.cpp
+    sync/gpodder/uploadepisodeactionrequest.cpp
     resources.qrc
 )
 
@@ -67,6 +82,13 @@ ecm_qt_declare_logging_category(SRCS_base
     HEADER "fetcherlogging.h"
     IDENTIFIER "kastsFetcher"
     CATEGORY_NAME "org.kde.kasts.fetcher"
+    DEFAULT_SEVERITY Info
+)
+
+ecm_qt_declare_logging_category(SRCS_base
+    HEADER "synclogging.h"
+    IDENTIFIER "kastsSync"
+    CATEGORY_NAME "org.kde.kasts.sync"
     DEFAULT_SEVERITY Info
 )
 
@@ -123,7 +145,7 @@ add_executable(kasts ${SRCS})
 kconfig_add_kcfg_files(kasts settingsmanager.kcfgc GENERATE_MOC)
 
 target_include_directories(kasts PRIVATE ${CMAKE_BINARY_DIR})
-target_link_libraries(kasts PRIVATE Qt::Core Qt::Qml Qt::Quick Qt::QuickControls2 Qt::Sql Qt::Multimedia KF5::Syndication KF5::CoreAddons KF5::ConfigGui KF5::I18n Taglib::Taglib SolidExtras)
+target_link_libraries(kasts PRIVATE Qt::Core Qt::Qml Qt::Quick Qt::QuickControls2 Qt::Sql Qt::Multimedia KF5::Syndication KF5::CoreAddons KF5::ConfigGui KF5::I18n Taglib::Taglib SolidExtras ${QTKEYCHAIN_LIBRARIES})
 
 if(ANDROID)
     target_link_libraries(kasts PRIVATE
@@ -175,13 +197,22 @@ if(ANDROID)
         view-media-playlist
         source-playlist
         arrow-down
+        go-next
         overflow-menu
         checkbox
         error
         search
         kt-add-feeds
+        state-sync
         network-connect
         drive-harddisk-symbolic
+        dialog-ok
+        dialog-cancel
+        computer
+        computer-laptop
+        network-server-database
+        smartphone
+        emblem-music-symbolic
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets Qt::DBus)
