--- a/src/solidextras/CMakeLists.txt
+++ b/src/solidextras/CMakeLists.txt
@@ -19,22 +19,24 @@ else()
     qt_add_dbus_interface(solidextras_srcs org.freedesktop.portal.NetworkMonitor.xml portalnetworkmonitor)
 endif()
 
-add_library(SolidExtras ${solidextras_srcs})
-generate_export_header(SolidExtras BASE_NAME SolidExtras)
+add_library(KastsSolidExtras ${solidextras_srcs})
+generate_export_header(KastsSolidExtras BASE_NAME KastsSolidExtras)
 
 if (TARGET KF5::NetworkManagerQt)
     set(HAVE_NM ON)
 endif()
 configure_file(config-solid-extras.h.in ${CMAKE_CURRENT_BINARY_DIR}/config-solid-extras.h)
 
-target_include_directories(SolidExtras PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>")
-target_link_libraries(SolidExtras PUBLIC Qt::Core)
+target_include_directories(KastsSolidExtras PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>")
+target_link_libraries(KastsSolidExtras PUBLIC Qt::Core)
 
 if (ANDROID)
-    target_link_libraries(SolidExtras PRIVATE Qt::AndroidExtras)
+    target_link_libraries(KastsSolidExtras PRIVATE Qt::AndroidExtras)
 else ()
-    target_link_libraries(SolidExtras PRIVATE Qt::DBus)
+    target_link_libraries(KastsSolidExtras PRIVATE Qt::DBus)
     if (TARGET KF5::NetworkManagerQt)
-        target_link_libraries(SolidExtras PRIVATE KF5::NetworkManagerQt)
+        target_link_libraries(KastsSolidExtras PRIVATE KF5::NetworkManagerQt)
     endif()
 endif()
+
+install(TARGETS KastsSolidExtras ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
