Don't try to use clang-format on android at all

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,12 @@ include(ECMSetupVersion)
 include(ECMQtDeclareLoggingCategory)
 include(ECMGenerateExportHeader)
 include(KDEInstallDirs)
-include(KDEClangFormat)
 include(KDEGitCommitHooks)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
-
+if(NOT ANDROID)
+    include(KDEClangFormat)
+endif()
 
 ecm_setup_version(${PROJECT_VERSION}
     VARIABLE_PREFIX KASTS
@@ -73,10 +74,10 @@ add_subdirectory(src)
 
 feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
 
-file(GLOB_RECURSE ALL_CLANG_FORMAT_SOURCE_FILES src/*.cpp src/*.h)
-kde_clang_format(${ALL_CLANG_FORMAT_SOURCE_FILES})
 
 if (NOT ANDROID)
     # inside if-statement to work around problems with gitlab Android CI
+    file(GLOB_RECURSE ALL_CLANG_FORMAT_SOURCE_FILES src/*.cpp src/*.h)
+    kde_clang_format(${ALL_CLANG_FORMAT_SOURCE_FILES})
     kde_configure_git_pre_commit_hook(CHECKS CLANG_FORMAT)
 endif()
