Show loading notification and add keywords to desktop file

--- a/org.kde.kasts.desktop
+++ b/org.kde.kasts.desktop
@@ -65,6 +65,7 @@ GenericName[sv]=Poddradioprogram
 GenericName[uk]=Програма для подкастів
 GenericName[x-test]=xxPodcast Applicationxx
 GenericName[zh_CN]=播客应用程序
+Keywords=podcast
 Icon=kasts
 Exec=kasts
 Type=Application
@@ -72,3 +73,4 @@ Categories=Network;Qt;KDE;Feed;
 Terminal=false
 InitialPreference=10
 X-KDE-FormFactor=desktop;tablet;handset;
+StartupNotify=true
