Use multithreading for feed updates (using ThreadWeaver)
This contains the following changes:
- Use separate db connections for feed updates (required for
  multithreading.
- Add ThreadWeaver dependency.
- Port update job from KJob to ThreadWeaver::Job
- This should also solve the bug where the update process would hang
  on the "processEvents" call, which was intended to keep the UI
  responsive during updates.

BUG: 452585

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -10,3 +10,4 @@ Dependencies:
     'frameworks/syndication': '@stable'
     'frameworks/ki18n': '@stable'
     'frameworks/kconfig': '@stable'
+    'frameworks/threadweaver': '@stable'
