--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,8 +6,8 @@
  -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.kde.kasts"
-          android:versionName="0.0.1"
-          android:versionCode="1588098483"
+          android:versionName="${versionName}"
+          android:versionCode="${versionCode}"
           android:installLocation="auto">
 
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
