Add app icons for windows build
Closes #26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ include(KDEInstallDirs)
 include(KDEGitCommitHooks)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
+include(ECMAddAppIcon)
 if(NOT ANDROID)
     include(KDEClangFormat)
 endif()
