Add missing icon to CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -235,6 +235,7 @@ if(ANDROID)
         gpodder
         kaccounts-nextcloud
         clock
+        viewimage
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets Qt::DBus)
