--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -11,6 +11,7 @@ Dependencies:
     'frameworks/ki18n': '@stable'
     'frameworks/kconfig': '@stable'
     'frameworks/threadweaver': '@stable'
+    'libraries/kirigami-addons': '@latest'
 
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows' ]
