Add and use Chapter class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRCS_base
     feed.cpp
     author.cpp
     enclosure.cpp
+    chapter.cpp
     datamanager.cpp
     audiomanager.cpp
     error.cpp
