Add third-party deps to .kde-ci.yml
The CI system already provides these so it doesn't have any effect there, but this allows to generate correct dependency data for kdesrc-build from .kde-ci.yml

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -12,6 +12,8 @@ Dependencies:
     'frameworks/kconfig': '@stable'
     'frameworks/threadweaver': '@stable'
     'libraries/kirigami-addons': '@stable'
+    'third-party/qtkeychain': '@latest'
+    'third-party/taglib': '@latest'
 
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows' ]
