Use more appropriate info icon

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -183,7 +183,7 @@ if(ANDROID)
         window-close-symbolic
         delete
         settings-configure
-        help-about-symbolic
+        documentinfo
         tools-report-bug
         list-add
         list-remove
