Add missing icon to CMakeLists.txt for inclusion in android

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -234,6 +234,7 @@ if(ANDROID)
         kaccounts-nextcloud
         clock
         viewimage
+        media-playback-start-cloud
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets Qt::DBus)
