Use pragma once everywhere

--- a/src/solidextras/config-solid-extras.h.in
+++ b/src/solidextras/config-solid-extras.h.in
@@ -4,9 +4,6 @@
     SPDX-License-Identifier: LGPL-2.0-or-later
 */
 
-#ifndef CONFIG_SOLID_EXTRAS_H
-#define CONFIG_SOLID_EXTRAS_H
+#pragma once
 
 #cmakedefine HAVE_NM
-
-#endif
